--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,101 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Sockets Example</title>
-    <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
-    
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.min.js"></script>
-    <script type="text/javascript" src="sketch.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <title>Sockets Example</title>
+  <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
 
-    <style>
-      body {
-        padding: 20px;
-      }
-    </style>
-  </head>
-  <body>
-  </body>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.min.js"></script>
+  <script type="text/javascript" src="sketch.js"></script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var checkbox = document.querySelector('input[type="checkbox"]');
+
+      checkbox.checked = true;
+
+      checkbox.addEventListener('change', function () {
+        if (checkbox.checked) {
+      // do this
+      console.log('Checked');
+    } else {
+      // Mute audio and display a countdown timer
+      console.log('Not checked');
+    }
+  });
+    });
+  </script>
+
+  <style>
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+    }
+
+    .switch input { 
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+
+
+
+
+
+  </style>
+
+  <label class="switch">
+    <input id="toggle" type="checkbox">
+    <span class="slider"></span>
+  </label>
+
+  <p>Feedback
+  </p>
+  <p>Thanks to: </p>
+  <p></p>
+
+</head>
+<body>
+</body>
 </html>
