hopefully fixed broken pd patch. new toggle etc.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
   });
 </script>
 
+<p id="demo"> Click toggle to mute </p>
+
+
+
+
 <style>
   .switch {
     position: relative;
@@ -88,10 +93,18 @@
   <span class="slider"></span>
 </label>
 
+<p>  </p>
+<p>Move slider to play music </p>
+
+
+<!--
+
 <p>Feedback
 </p>
 <p>Thanks to: </p>
 <p></p>
+
+-->
 
 </head>
 <body>
