SMHI now integrated. PD now responds to sun and weather changes

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Sockets Example</title>
-  <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
   <script type="text/javascript" src="sketch.js"></script>
 
@@ -25,7 +25,7 @@
   });
 </script>
 
-<p id="demo"> Click toggle to mute </p>
+<p id="demo"> Click the toggle to mute weather installation</p>
 
 
 
@@ -94,14 +94,32 @@
 </label>
 
 <p>  </p>
-<p>Move slider to play music </p>
 
 
+<h1>Current weather</h1>
+
+<p><span style='font-size:28px;' id='Wsymb2'></span></p>
+
+<p>To play music, plug in the cable to your phone or computer and move the slider to adjust the volume. </p>
 <!--
 
-<p>Feedback
+<p>Thanks to: 
+  Gustav Ekberg
+  Ines Noueched & Fastighetsavdelningen
+  
+  Micke Berling
+  Olle & Wincent på SVT Design i Växjö
+  Miriam Klein Strandberg & teknikerna på P3 Dystopia
+  
+  Daniel Shiffman, The Coding Train
+  Edsvikens el
+  [...] & [...] på mekaniska
+  Snickeriet
+  SMHI
+  sunrise-sunset.org/
+
+  If nothing happens, hit refresh page!
 </p>
-<p>Thanks to: </p>
 <p></p>
 
 -->
