--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Sockets Example</title>
@@ -7,104 +8,134 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
   <script type="text/javascript" src="sketch.js"></script>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    var checkbox = document.querySelector('input[type="checkbox"]');
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // var checkbox = document.querySelector('input[type="checkbox"]');
+      var checkbox = document.querySelector('#toggle');
 
-    checkbox.checked = true;
+      checkbox.checked = true;
 
-    checkbox.addEventListener('change', function () {
-      if (checkbox.checked) {
-      // do this
-      console.log('Checked');
-    } else {
-      // Mute audio and display a countdown timer
-      console.log('Not checked');
+      // checkbox.addEventListener('change', function () {
+      //   if (checkbox.checked) {
+      //     // do this
+      //     console.log('checkbox checked');
+      //   } else {
+      //     // Mute audio and display a countdown timer
+      //     console.log('checkbox not checked');
+      //   }
+      // });
+    });
+
+    document.addEventListener('DOMContentLoaded', function () {
+      //var musicbox = document.querySelector('input[type="checkbox"]');
+      var musicbox = document.querySelector('#musictoggle');
+
+      musicbox.checked = false;
+
+      // musicbox.addEventListener('change', function () {
+      //   if (musicbox.checked) {
+      //     // do this
+      //     console.log('Musicbox checked');
+      //   } else {
+      //     // Mute audio and display a countdown timer
+      //     console.log('Musicbox not checked');
+      //   }
+      // });
+    });
+
+  </script>
+
+  <script>
+
+
+
+  </script>
+
+  <p id="demo"> Click the toggle to mute weather installation</p>
+
+
+
+  <style>
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
     }
-  });
-  });
-</script>
 
-<p id="demo"> Click the toggle to mute weather installation</p>
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
 
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
 
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
 
+    input:checked+.slider {
+      background-color: #2196F3;
+    }
 
-<style>
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
+    input:focus+.slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
 
-  .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
+    input:checked+.slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+  </style>
 
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
+  <label class="switch">
+    <input id="toggle" type="checkbox">
+    <span class="slider"></span>
+  </label>
 
 
 
+  <p> </p>
 
 
-</style>
+  <h1>Current weather</h1>
 
-<label class="switch">
-  <input id="toggle" type="checkbox">
-  <span class="slider"></span>
-</label>
+  <p><span style='font-size:28px;' id='Wsymb2'></span></p>
 
-<p>  </p>
+  <p>To play music, plug in the cable to your phone or computer and move the slider to adjust the volume. </p>
+
+  <label class="switch">
+    <input id="musictoggle" type="checkbox">
+    <span class="slider"></span>
+  </label>
 
 
-<h1>Current weather</h1>
-
-<p><span style='font-size:28px;' id='Wsymb2'></span></p>
-
-<p>To play music, plug in the cable to your phone or computer and move the slider to adjust the volume. </p>
-<!--
+  <!--
 
 <p>Thanks to: 
   Gustav Ekberg
+  Peter Koondial
+  Robin Wehlin
   Ines Noueched & Fastighetsavdelningen
   
   Micke Berling
@@ -125,6 +156,8 @@
 -->
 
 </head>
+
 <body>
 </body>
+
 </html>
