--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,8 @@
 
   </script>
 
-  <p id="demo"> Click the toggle to mute weather installation</p>
-
+  <p id="demo"> Click the toggle to temporarily mute the weather installation</p>
+  <!-- <p id="demo"> Tryck på knappen för att tillfälligt stänga av ljudinstallationen</p> -->
 
 
   <style>
@@ -106,6 +106,10 @@
       -ms-transform: translateX(26px);
       transform: translateX(26px);
     }
+
+    p {
+      font-size: 34px;
+    }
   </style>
 
   <label class="switch">
@@ -117,17 +121,19 @@
 
   <p> </p>
 
-
-  <h1>Current weather</h1>
-
-  <p><span style='font-size:28px;' id='Wsymb2'></span></p>
-
-  <p>To play music, plug in the cable to your phone or computer and move the slider to adjust the volume. </p>
+  <p>To play music, plug in the cable to your phone or computer and click the toggle. </p>
 
   <label class="switch">
     <input id="musictoggle" type="checkbox">
     <span class="slider"></span>
   </label>
+
+
+  <h1>Current weather</h1>
+
+  <p><span style='font-size:48px;' id='Wsymb2'></span></p>
+
+
 
 
   <!--
