--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 
   </script>
 
-  <p id="demo"> Click the toggle to temporarily mute the weather installation</p>
+  <p id="demo"> Fågelljud På </p>
   <!-- <p id="demo"> Tryck på knappen för att tillfälligt stänga av ljudinstallationen</p> -->
 
 
@@ -110,6 +110,10 @@
     p {
       font-size: 34px;
     }
+
+    h1 {
+      font-size: 40px;
+    }
   </style>
 
   <label class="switch">
@@ -121,7 +125,9 @@
 
   <p> </p>
 
-  <p>To play music, plug in the cable to your phone or computer and click the toggle. </p>
+  <p id="extern"> Extern ljudingång Av</p>
+
+
 
   <label class="switch">
     <input id="musictoggle" type="checkbox">
@@ -129,9 +135,13 @@
   </label>
 
 
-  <h1>Current weather</h1>
 
-  <p><span style='font-size:48px;' id='Wsymb2'></span></p>
+
+  <!-- <h1>Aktuellt väder</h1> -->
+
+
+  <p>Aktuellt väder: <span id='Wsymb2'></span>, <span id='celcius'></span> ˚C </p>
+
 
 
 
