changed some [declare library] statements in order to get mrpeach udpreceive and udpsend to work

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
 
   <span id='hint'> </span>
 
-  <p>Aktuellt väder: <span id='Wsymb2'></span>, <span id='celcius'></span> ˚C </p>
+  <p><span id='Wsymb2'></span>, <span id='celcius'></span> ˚C </p>
 
 
 
